--- a/www/contact.html
+++ b/www/contact.html
@@ -52,7 +52,7 @@
                 <button>FERMER</button>
             </div>
             <div class="contact-container-form">
-                <form id="form">
+                <form id="form" novalidate>
                     <div class="form-control">
                         <label for="firstname">Nom *</label>
                         <input name="firstname" id="firstname" type="text" required>
@@ -99,7 +99,7 @@
                     Tel : +33 9 46 25 78 45<br>
                     Mail : <a href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
                 <br><br></p>
-                <img src="./assets/carte_contact.png" alt="Map">
+                <iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=15%20place%20Jules%20Guesde%20paris+(Mr%20Coffee)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
             </div>
         </section>
         <div class="spacer"></div>
